docs/attachment/kubernetes/app/20-envoy-gateway-quickstart-v1.6.0.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gc
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw
  namespace: default
spec:
  gatewayClassName: gc
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: http-8080
    protocol: HTTP
    port: 8080
  - name: https
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-8ops.top
      - group: ""
        kind: Secret
        name: tls-u3c.ai
