docs/attachment/kubernetes/app/51-nginx-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: nginx
    name: nginx
    namespace: default
  spec:
    replicas: 2
    revisionHistoryLimit: 5
    selector:
      matchLabels:
        app: nginx
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
        - image: hub.8ops.top/bitnami/nginx:1.23.4
          imagePullPolicy: IfNotPresent
          name: nginx
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 30m
              memory: 32Mi
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: nginx
    name: nginx
    namespace: default
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: nginx
    type: ClusterIP
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    labels:
      app: nginx
    name: nginx
    namespace: default
  spec:
    ingressClassName: external
    rules:
    - host: nginx.8ops.top
      http:
        paths:
        - backend:
            service:
              name: nginx
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
      - hosts:
          - nginx.8ops.top
        secretName: tls-8ops.top
kind: List
